fix iframe overflow

--- a/src/styles/components/security-cam.scss
+++ b/src/styles/components/security-cam.scss
@@ -4,4 +4,5 @@
   border: 2px solid $primary-accent;
   height: 484px;
   width: 644px;
+  max-width: 100%
 }
